# frame_registration

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  frame_registration  frame_registration.cbp  frame_registration.hpp
catkin_generated/: generate_cached_setup.py  ordered_paths.cmake  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_generated/installspace/: frame_registration.pc  frame_registrationConfig.cmake
catkin_generated/stamps/frame_registration/: package.xml.stamp
devel/: .catkin  .rosinstall  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/lib/frame_registration/: frame_registration_node  frame_registration_node2  frame_registration_node3
devel/lib/pkgconfig/: frame_registration.pc
devel/share/frame_registration/cmake/: frame_registrationConfig.cmake
gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
src/: frame_registration.cpp  frame_registration.cpp.autosave  frame_registration.h  frame_registration2.cpp  frame_registration3.cpp
